# esemese-backend-server

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  compose.yml  esemese-execution-plan.md
.claude/: settings.local.json
.sqlx/: query-0a86c573a99757a0ff5761b062f8c82f1b712963fa44fb734d43e5786c174626.json  query-13b9755055ceb4bb15280b000dba5fdbaf54024b67799be6c24b935e90558748.json  query-24c6884d1d27585dcc865cce2c1aaa7f92d6120762daa7c2e7c27851c8e39d45.json  query-2668f7d2818f1272ff922fb233544c590978ee4d255c371704c946ce69245ac9.json  query-39801930f8293dc46efbf4b7426461f12f8078c50d10c81e061d767ae50f1d8d.json  query-3e77ca22684d8e1ae9067f903d1880134b052d048cb7c626ddef27696fd8ba51.json  query-688d8cbf909ff72a17913a4d349bfb41eae27305c7461ab05667e727eb96fbfb.json  query-69cae92cdd56c19fad0941ede06ebd825952a605e097106e191f047c7ad4af04.json  query-7a1401bc80a85b3eed87b9858f072e8e5de9927a7f28bb54823002160501fea9.json  query-ac1c5b540e6d1a528c0ec65959167f3bb376a858e242f2e7848d7636b9143368.json
migrations/: 20260407000001_create_collections.sql  20260407000002_create_photos.sql  20260407000003_create_photo_metadata.sql  20260407000004_create_collection_photos.sql  20260407000005_create_uploads.sql  20260407000006_add_collections_cover_fk.sql  20260608051240_create_photo_variants.sql  20260608052558_create_published_photos_view.sql  20260630063719_add_claimed_at_attempts_to_photos.sql
scripts/: init.sh
scripts/postgres-init/: 10-create-app-user.sh
src/: config.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/common/: api.rs  errors.rs  middleware.rs  (+2 more)
(+15 files in other folders)
