[package]
name = "esemese-backend-server"
version = "0.1.0"
authors = ["Nkemjika Ohanyere <contact@nkem.dev>"]
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "esemese-backend-server"

[dependencies]
actix-cors = "0.7.1"
actix-governor = "0.10.0"
actix-web = "4.13.0"
actix-web-httpauth = "0.8.2"
argon2 = "0.5.3"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = {version = "10.3.0", features = ["rust_crypto"] }
secrecy = {version = "0.10.3", features = ["serde"]}
serde = "1.0.228"
serde-aux = "4.7.0"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "tls-rustls-ring-webpki", "chrono", "uuid", "ipnetwork"] }
thiserror = "2.0.18"
tokio = {version = "1.50.0", features = ["full", "macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-actix-web = "0.7.21"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = {version = "0.3.23", features = ["registry", "env-filter"] }
unicode-segmentation = "1.13.2"
uuid = {version = "1.23.0", features = ["serde", "v4"] }
